# meili

./: .gitignore  README.md  index_data.py  main.py  pyproject.toml
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx  README.md
frontend/src/components/: search-section.tsx
tests/: test_queries.py
